--- a/aboly.html
+++ b/aboly.html
@@ -1264,7 +1264,8 @@ img.characterimg {
 <p>
 <a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
 </p>
-<p>传统政治实践中，德治与法治相为补益。《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教、用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）</p>
+<p>传统政治实践中，德治与法治相为补益。《孟子&middot;离娄上》认为：<span class="lyq">徒善不足以为政，徒法不能以自行。</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教、用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>
+</p>
 <p>教化中则多偏重德礼修养，轻视普法宣传。《史记&middot;礼书》开头，<span class="lyq">太史公曰：<a href="#yangyang">洋洋</a>美德乎！宰制万物，役使群众，岂人力也哉？</span>（人力：指强力可为。）《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
 </div>
 </li>
@@ -3615,7 +3616,7 @@ img.characterimg {
 <a id="yi4c"></a><span class="lyterm">邑</span>（<span class="lypinyin">y&igrave;</span>）：城镇，大小不等，常作为天子赐予诸侯，或诸侯赐予卿大夫的封地。一邑之宰多由家臣担任。<span class="lyseealso"><span>【参】</span><span>《左传&middot;庄公二十八年》：<span class="lyq">凡邑，有宗庙先君之主曰都，无曰邑。邑曰筑，都曰城。</span>（主：即神主，祭祀用的牌位。）</span></span>
 </p>
 <p>
-<span class="lyterm">千室之邑</span>与<span class="lyterm">百<a href="#sheng4a">乘</a>之<a href="#jia1">家</a></span>所指相同，均为卿大夫的封邑。<span class="lyq">室</span>：家庭，住户。<span class="lyseealso"><span>【参】</span><span>据皇侃义疏，<span class="lyq">地方一里为井，井有三家</span>（家即室），则1000室之邑约合地方18.3里。按《左传&middot;成公元年》杜预注，64井出兵车1乘，直接推算的话，100乘之家合地方80里，比于诸侯了。但&ldquo;千室&rdquo;可以换算为领地，&ldquo;百乘&rdquo;则是礼制。天子地方千里，合15625乘，符合<a href="#bingyi">万乘之尊</a>的定位。</span></span>
+<span class="lyterm">千室之邑</span>与<span class="lyterm">百<a href="#sheng4a">乘</a>之<a href="#jia1">家</a></span>所指相同，均为卿大夫的封邑。<span class="lyterm">室</span>：家庭，住户。<span class="lyseealso"><span>【参】</span><span>据皇侃义疏，<span class="lyq">地方一里为井，井有三家</span>（家即室），则1000室之邑约合地方18.3里。按《左传&middot;成公元年》杜预注，64井出兵车1乘，直接推算的话，100乘之家合地方80里，比于诸侯了。但&ldquo;千室&rdquo;可以换算为领地，&ldquo;百乘&rdquo;则是礼制。天子地方千里，合15625乘，符合<a href="#bingyi">万乘之尊</a>的定位。</span></span>
 </p>
 </li>
 <li>
@@ -4203,7 +4204,7 @@ img.characterimg {
 <p>
 <a id="nanmian"></a><span class="lyterm">南面</span>：指担任要职，做大官。古代以面朝南的方向为尊位，如皇帝龙椅的朝向，天安门的朝向，都是坐北向南。相对地，&ldquo;北面&rdquo;就是处于卑位，如臣下拜见君上。后来，&ldquo;面南背北&rdquo;专指登基做皇帝，大败而逃称为&ldquo;败北&rdquo;。<span class="lyexample"><span>【例】</span><span>《大戴礼记&middot;子张问入官》：<span class="lyq">故君子南面临官，大诚而公治之，精知而略行之。</span>（临官：处理政务，视事。）</span></span>
 </p>
-<p>冉雍以<a href="#11.3">德行</a>著称，孔子因何发此赞誉，已无法确知，也许和下一章有关。<span class="lyseealso"><span>【参】</span><span>据《三国志&middot;蜀书&middot;诸葛亮传》裴松之注，西晋儒臣袁准借孔子这句话来评价一代贤相诸葛亮：<span class="lyq">受<a href="#liuchizhigu">六尺之孤</a>，<a href="#she4a">摄</a>一国之政，事凡庸之君，专权而不失礼，行君事而国人不疑，如此即以为君臣百姓之心欣戴之矣。行法严而国人悦服，用民尽其力而下不怨。及其兵出入如宾，行不寇，<a href="#churao">刍荛</a>者不猎，如在国中。其用兵也，止如山，进退如风，兵出之日，天下震动，而人心不忧。亮死至今数十年，国人歌思，如周人之思<a href="#shaogong">召公</a>也。孔子曰：&ldquo;雍也，可使南面&rdquo;，诸葛亮有焉。</span></span></span>
+<p>冉雍以<a href="#11.3">德行</a>著称，孔子因何发此赞誉，已无法确知，也许和下一章有关。<span class="lyseealso"><span>【参】</span><span>据《三国志&middot;蜀书&middot;诸葛亮传》裴松之注，西晋儒臣袁准借孔子这句话来评价名相诸葛亮：<span class="lyq">受<a href="#liuchizhigu">六尺之孤</a>，<a href="#she4a">摄</a>一国之政，事凡庸之君，专权而不失礼，行君事而国人不疑，如此即以为君臣百姓之心欣戴之矣。行法严而国人悦服，用民尽其力而下不怨。及其兵出入如宾，行不寇，<a href="#churao">刍荛</a>者不猎，如在国中。其用兵也，止如山，进退如风，兵出之日，天下震动，而人心不忧。亮死至今数十年，国人歌思，如周人之思<a href="#shaogong">召公</a>也。孔子曰：&ldquo;雍也，可使南面&rdquo;，诸葛亮有焉。</span></span></span>
 </p>
 </li>
 </ul>
@@ -4222,7 +4223,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">子桑伯子</span>：鲁国人，复姓子桑，事迹不详。《说苑&middot;修文》有根据本章敷演的寓言。</p>
+<span class="lyterm">子桑伯子</span>：鲁国人，复姓子桑，事迹不详。《说苑&middot;修文》载有根据本章敷演的寓言。</p>
 </li>
 <li>
 <p>
@@ -4712,7 +4713,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="hao4"></a><span class="lyterm">好</span>（<span class="lypinyin">h&agrave;o</span>）：喜欢，爱好。其本义为女子貌美，作形容词。<span class="lyexample"><span>【例】</span><span>汉乐府诗《陌上桑》：<span class="lyq">秦氏有好女，自名为罗敷。</span></span></span>
+<a id="hao4"></a><span class="lyterm">好</span>（<span class="lypinyin">h&agrave;o</span>）：喜欢，爱好。其本义为女子貌美，作形容词，读 <span class="lypinyin">hǎo</span>。<span class="lyexample"><span>【例】</span><span>汉乐府诗《陌上桑》：<span class="lyq">秦氏有好女，自名为罗敷。</span></span></span>
 </p>
 </li>
 <li>
@@ -6986,7 +6987,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">各得其所</span>：各自得到其应有的位置。除了这个含义，成语&ldquo;各得其所&rdquo;也可以指各人都得到了自己想要的东西。</p>
+<span class="lyterm">各得其所</span>：各自得到其应有的位置。除了这个意思，成语&ldquo;各得其所&rdquo;也可以指各人都得到了自己想要的东西。</p>
 </li>
 </ul>
 </div>
@@ -7159,7 +7160,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">秀</span>：（禾类）开花抽穗。因为前面两章都是说颜回，古注有认为<span class="lyterm">苗而不秀</span>是痛惜其早夭的话。成语&ldquo;苗而不秀&rdquo;比喻人有好的天赋却没有取得成就，也可以指人虚有其表。<span class="lyexample"><span>【例】</span><span>王实甫《西厢记》第四本第二折，红娘埋怨张生窝囊：<span class="lyq">你原来&ldquo;苗而不秀&rdquo;，呸！你是个银样镴枪头。</span>（镴（<span class="lypinyin">l&agrave;</span>）：锡铅合金，即焊锡。）</span></span>
+<span class="lyterm">秀</span>：（禾类）开花抽穗，这是其本义。因为前面两章都是说颜回，古注有认为<span class="lyterm">苗而不秀</span>是痛惜其早夭的话。成语&ldquo;苗而不秀&rdquo;比喻人有好的天赋却没有取得相应的成就，也可以指人虚有其表。<span class="lyexample"><span>【例】</span><span>王实甫《西厢记》第四本第二折，红娘埋怨张生窝囊：<span class="lyq">你原来&ldquo;苗而不秀&rdquo;，呸！你是个银样镴枪头。</span>（镴（<span class="lypinyin">l&agrave;</span>）：锡铅合金，即焊锡。银样镴枪头：形容中看不中用。）</span></span>
 </p>
 </li>
 <li>
@@ -7688,7 +7689,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">饐</span>（<span class="lypinyin">y&igrave;</span>）：食物因久放而腐臭。<span class="lyterm">餲</span>（<span class="lypinyin">a&igrave;</span>）：食物因久放而变味。</p>
+<span class="lyterm">饐</span>（<span class="lypinyin">y&igrave;</span>）：食物因久放而腐臭。<span class="lyterm">餲</span>（<span class="lypinyin">&agrave;i</span>）：食物因久放而变味。</p>
 <p>
 <span class="lyterm">馁</span>：鱼肉腐坏。<span class="lyterm">败</span>：腐烂，变质。</p>
 </li>
@@ -8014,7 +8015,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">于我殡</span>（<span class="lypinyin">b&igrave;n</span>）：由我负责丧葬事宜。<span class="lyterm">殡</span>：死者入殓后停柩待葬。<span class="lyterm">于</span>：表示动作的来源，由，自。<span class="lyexample"><span>【例】</span><span>成语&ldquo;青出于蓝&rdquo;。</span></span><a id="tongcaizhiyi"></a><span class="lyseealso"><span>【参】</span><span>《白虎通&middot;文质》：<span class="lyq">朋友之际，五常之道，有通财之义，振穷救急之意，中心好之，欲饮食之。</span></span></span>
+<span class="lyterm">于我殡</span>（<span class="lypinyin">b&igrave;n</span>）：由我负责丧葬事宜。<span class="lyterm">殡</span>：死者入殓后停柩待葬。<a id="yu2e"></a><span class="lyterm">于</span>：表示动作的来源，由，自，从。<span class="lyexample"><span>【例】</span><span>成语&ldquo;青出于蓝&rdquo;。</span></span><a id="tongcaizhiyi"></a><span class="lyseealso"><span>【参】</span><span>《白虎通&middot;文质》：<span class="lyq">朋友之际，五常之道，有通财之义，振穷救急之意，中心好之，欲饮食之。</span></span></span>
 </p>
 <p>还可以比较<span class="lyterm">于我</span>和英文口语中表达&ldquo;我来出钱&rdquo;的on me，on表示依靠，基于。<span class="lyexample"><span>【例】</span><span><em>Friends</em>第5季第24集，<em>The One in Vegas</em>: <span class="lyqe">They really overcharge you for that stuff. But who cares? Because it's all on me!</span></span></span>
 </p>
@@ -11170,7 +11171,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">夫子固有惑志于公伯寮</span>：<a href="#jihuanzi">季桓子</a>先生确实被公伯寮的谗言说糊涂了（而猜疑子路）。<span class="lyterm">惑志</span>：迷乱之心，疑心。<span class="lyexample"><span>【例】</span><span>《宋史&middot;陈襄传》：<span class="lyq">襄曰：&ldquo;&lsquo;自反而缩，虽千万人往矣。&rsquo;公苟有惑志，何名知己！&rdquo;</span>（&ldquo;自反而缩&rdquo;句，引自《孟子&middot;公孙丑上》。自反：反躬自省。缩：直。）</span></span>
+<span class="lyterm">夫子固有惑志<a href="#yu2e">于</a>公伯寮</span>：<a href="#jihuanzi">季桓子</a>先生确实让公伯寮的谗言说糊涂了（而猜疑子路）。<span class="lyterm">惑志</span>：迷乱之心，疑心。<span class="lyexample"><span>【例】</span><span>《宋史&middot;陈襄传》：<span class="lyq">襄曰：&ldquo;&lsquo;自反而缩，虽千万人往矣。&rsquo;公苟有惑志，何名知己！&rdquo;</span>（&ldquo;自反而缩&rdquo;句，引自《孟子&middot;公孙丑上》。自反：反躬自省。缩：直。）</span></span>
 </p>
 </li>
 <li>
@@ -11178,6 +11179,8 @@ img.characterimg {
 <span class="lyterm">肆诸市朝</span>：把他陈尸于市集，就是说除掉公伯寮。<span class="lyterm">肆</span>：处以死刑后陈尸示众。据郑玄注，大夫及以上肆于朝廷，士及以下肆于市集（弃市）。公伯寮是士，所以<span class="lyterm">市朝</span>偏指市集。</p>
 </li>
 </ul>
+<p>
+<span class="lyseealso"><span>【参】</span><span>清初张尔岐《蒿庵闲话》：<span class="lyq">人道之当然而不可违者，义也；天道之本然而不可争者，命也。&hellip;&hellip;命不可知，君子当以义知命矣。凡义所不可，即以为命所不有也。&hellip;&hellip;君子以义安命，故其心常泰。小人以智力争命，故其心多怨。众人之于命，亦有安之矣，大约皆知其无可奈何而后安之者也。圣人之于命，安之矣，实不以命为准也，而以义为准。故虽力有可争，势有可图，而退然处之，曰义之所不可也。义所不可，斯曰命矣。</span></span></span>思考：依靠不正当的手段获取&ldquo;第一桶金&rdquo;，然后努力&ldquo;洗白&rdquo;，你知道这样的例子吗？传统儒家与诸子各家持什么观点？你认同吗？</p>
 </div>
 </div>
 <a id="14.37"></a>
@@ -13287,7 +13290,9 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">有三年之爱于其父母</span>：指用居丧三年来表达对父母的爱，就像三岁之前身在父母怀抱中，父母对自己的爱一样。这里把<span class="lyterm">于</span>理解为对，如果理解为从，就是说：难道年幼时没有从父母那里得到三年不离于怀的爱护吗，亦通。</p>
+<span class="lyterm">有三年之爱于其父母乎？</span>：对父母有三年的爱吗？意思是，应该用居丧三年的礼仪，来表达对父母的爱，就像三岁之前身在父母怀抱中，父母对自己的爱一样。这里把<span class="lyterm">于</span>理解为对，如果理解为从，意即：难道年幼时没有从父母那里得到三年不离于怀的爱护吗，也通。<span class="lyseealso"><span>【参】</span><span>《说苑&middot;修文》：<span class="lyq">子生三年，然后免于父母之怀。故制丧三年，所以报父母之恩也。</span></span></span>
+</p>
+<p>&ldquo;有&hellip;&hellip;于&hellip;&hellip;&rdquo;的结构，既可表示have sth towards sb，give sth to sb，例如 <a href="#16.1" class="lyref">16.1</a> <span class="lyq">季氏将有事于颛臾</span>；又可表示get sth from sb，例如 <a href="#14.36" class="lyref">14.36</a> <span class="lyq">夫子固有惑志于公伯寮</span>。无论如何，这句话的语气都很严厉。</p>
 </li>
 </ul>
 </div>
@@ -14657,11 +14662,11 @@ img.characterimg {
 <p>
 <a id="yuansi"></a><span class="lycharname">原思</span>，<span class="lycharname">宪</span>：原宪，字子思，少孔子36岁。《仲尼弟子列传》载，孔子去世后，他在乡间隐居，生活极清贫。<a href="#zigong">子贡</a>乘驷马高车来探望他，<span class="lyq">宪<a href="#she4">摄</a>敝衣冠见子贡。子贡耻之，曰：&ldquo;夫子岂<a href="#bing4">病</a>乎？&rdquo;原宪曰：&ldquo;吾闻之：无财者谓之贫，学道而不能行者谓之病。若宪，贫也，非病也。&rdquo;子贡惭，不怿而去，终身耻其言之过也。</span>（怿（<span class="lypinyin">y&igrave;</span>）：喜悦，高兴。）《史记&middot;游侠列传》说他<span class="lyq">读书怀独行君子之德，义不<a href="#gouhe">苟合</a>当世，当世亦笑之。&hellip;&hellip;终身空室蓬户，褐衣<a href="#shushi">疏食</a>不厌。死而已四百余年，而弟子志之不倦。</span>（褐衣：粗布衣。） <a href="#6.5" class="lyref">6.5</a> <a href="#14.1" class="lyref">14.1</a> </p>
 <p>
-<a id="zaiyu"></a><span class="lycharname">宰予</span>，<span class="lycharname">宰我</span>，<span class="lycharname">予</span>：字子我，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他口才出众，甚至超过大名鼎鼎的外交家<a href="#zigong">子贡</a>；思维活跃，不仅<a href="#17.21">质疑</a>过三年丧期的必要，还怀疑过黄帝的传说，向孔子追问<a href="#wudi">五帝</a>的由来（《大戴礼记&middot;五帝德》）。可孔子是反感伶牙俐齿的，也不太欣赏出格的想法和行为，《论语》中宰予总是受到敲打。《孟子&middot;公孙丑上》引用他对孔子的评价：<span class="lyq">以予观于夫子，贤于<a href="#yao">尧</a>、<a href="#shun">舜</a>远矣</span>，认为他和<a href="#zigong">子贡</a>、<a href="#youruo">有若</a>一样<span class="lyq">智足以知圣人</span>。宰予墓遗址在今山东省曲阜市古城村。 <a href="#3.21" class="lyref">3.21</a> <a href="#5.10" class="lyref">5.10</a> <a href="#6.26" class="lyref">6.26</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.21" class="lyref">17.21</a> </p>
+<a id="zaiyu"></a><span class="lycharname">宰予</span>，<span class="lycharname">宰我</span>，<span class="lycharname">予</span>：字子我，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他口才出众，甚至超过大名鼎鼎的外交家<a href="#zigong">子贡</a>；思维活跃，不仅<a href="#17.21">质疑</a>过三年丧期的必要，还怀疑过黄帝的传说，向孔子追问<a href="#wudi">五帝</a>的由来（《大戴礼记&middot;五帝德》）。可孔子是反感伶牙俐齿的，也不太欣赏出格的想法和行为，《论语》中宰予总是受到敲打。《孟子&middot;公孙丑上》引用他对孔子的评价：<span class="lyq">以予观于夫子，贤于<a href="#yao">尧</a>、<a href="#shun">舜</a>远矣</span>，认为他和<a href="#zigong">子贡</a>、<a href="#youruo">有若</a>一样，<span class="lyq">智足以知圣人</span>。宰予墓遗址在今山东省曲阜市古城村。 <a href="#3.21" class="lyref">3.21</a> <a href="#5.10" class="lyref">5.10</a> <a href="#6.26" class="lyref">6.26</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.21" class="lyref">17.21</a> </p>
 <p>
 <a id="zengxi"></a><span class="lycharname">曾皙</span>（<span class="lypinyin">xī</span>），<span class="lycharname">点</span>：曾点，字皙，<a href="#zengshen">曾参</a>之父，鲁国<a href="#wucheng">南武城</a>人。《孟子&middot;尽心下》说，他属于孔子眼中的<a href="#kuangjuan">狂士</a>。他教子严厉，有一次曾参在瓜田里除草，不小心斩到瓜根，他勃然大怒，操起大棒抡在儿子背上。曾参倒地昏厥良久，醒来后连忙好声好气跟父亲陪不是，还问有没有用力过猛伤到身体。事后，孔子批评曾参之孝<a href="#11.16">过犹不及</a>：<span class="lyq">〔<a href="#shun">舜</a>事父〕小棰则待过，大杖则逃走。&hellip;&hellip;今参事父，委身以待暴怒，殪而不避，既身死而陷父于不义，其不孝孰大焉？</span>（棰（<span class="lypinyin">chu&iacute;</span>）：棍棒，用作动词。待过：等着接受责罚。殪（<span class="lypinyin">y&igrave;</span>）：死。）事见《孔子家语&middot;六本》、《吕氏春秋&middot;孟夏纪&middot;劝学》。后人不辨因果，附会出&ldquo;棍棒底下出孝子&rdquo;的俗语。曾皙墓、曾参墓在今山东省临沂市平邑县曾子山。 <a href="#11.26" class="lyref">11.26</a> </p>
 <p>
-<a id="zengshen"></a><span class="lycharname">曾子</span>，<span class="lycharname">参</span>（传统读<span class="lypinyin">shēn</span>，也有根据其<a href="#chenghu">字</a>，认为应读<span class="lypinyin">cān</span>，即同&ldquo;骖&rdquo;）：曾参（前505年&mdash;前435年），字子<a href="#yu2b">舆</a>，鲁国<a href="#wucheng">南武城</a>人，少孔子46岁。诸弟子中，他是孔子之学的主要<a href="#zisi">传承者</a>，后被封为<span class="lykeyword">宗圣</span>。曾参事父母至孝，是《二十四孝》第3个故事&ldquo;啮指心痛&rdquo;的主角。<a id="xiaojing"></a>儒家十三经之一的《孝经》，就采用他与孔子问答孝道的形式，共18章，约1800字，各章多引《诗经》作为总结。曾参笃于礼义，《礼记&middot;檀弓上》载，他病重卧床的那晚，听侍童说自己睡的是<a href="#qingdafushi">大夫</a>之席（曾参为<a href="#qingdafushi">士</a>），便挣扎着起身要求换席。两个儿子劝他等到天亮再换，他对儿子说：<span class="lyq">尔之爱我也不如彼。君子之爱人也以德，细人之爱人也以姑息。吾何求哉？吾得正而毙焉，斯已矣。</span>（彼：指侍童。细人：见识短浅的人。姑息：苟安。）换席后还没躺稳当，他就去世了。《大戴礼记》卷四、五共10篇，是他的语录，朱熹称他为《大学》的作者，但没有给出根据。</p>
+<a id="zengshen"></a><span class="lycharname">曾子</span>，<span class="lycharname">参</span>（传统读<span class="lypinyin">shēn</span>，也有根据其<a href="#chenghu">字</a>，认为应读<span class="lypinyin">cān</span>，即同&ldquo;骖&rdquo;）：曾参（前505年&mdash;前435年），字子<a href="#yu2b">舆</a>，鲁国<a href="#wucheng">南武城</a>人，少孔子46岁。诸弟子中，他是孔子之学的主要<a href="#zisi">传承者</a>，后被封为<span class="lykeyword">宗圣</span>。曾参事父母至孝，是《二十四孝》第3个故事&ldquo;啮指心痛&rdquo;的主角。<a id="xiaojing"></a>儒家十三经之一的《孝经》，就采用他与孔子问答孝道的形式，共18章，约1800字，各章多引《诗经》作为总结。曾参笃于礼义，《礼记&middot;檀弓上》载，他病重卧床的那晚，听侍童说自己睡的是<a href="#qingdafushi">大夫</a>之席（曾参为<a href="#qingdafushi">士</a>），便挣扎着起身要求换席。两个儿子劝他等到天亮再换，他对儿子说：<span class="lyq">尔之爱我也不如彼。君子之爱人也以德，细人之爱人也以姑息。吾何求哉？吾得正而毙焉，斯已矣。</span>（彼：指侍童。细人：见识短浅的人。姑息：苟安。）换席后还没躺稳当，他就去世了。《大戴礼记》卷四、五共10篇，是他的语录。朱熹称他为《大学》的作者，但没有给出根据。</p>
 <p>除了孔子的话以外，《论语》中对他所有的称谓都是曾子。其他弟子虽也有以<a href="#zi3">子</a>相称的，包括<a href="#youruo">有若</a>、<a href="#ranqiu">冉求</a>和<a href="#minziqian">闵子骞</a>，但都没有这样的待遇。后世多认为曾参和有若的弟子是编订《论语》的主力。 <a href="#1.4" class="lyref">1.4</a> <a href="#1.9" class="lyref">1.9</a> <a href="#4.15" class="lyref">4.15</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.4" class="lyref">8.4</a> <a href="#8.5" class="lyref">8.5</a> <a href="#8.6" class="lyref">8.6</a> <a href="#8.7" class="lyref">8.7</a> <a href="#11.18" class="lyref">11.18</a> <a href="#12.24" class="lyref">12.24</a> <a href="#14.26" class="lyref">14.26</a> <a href="#19.16" class="lyref">19.16</a> <a href="#19.17" class="lyref">19.17</a> <a href="#19.18" class="lyref">19.18</a> <a href="#19.19" class="lyref">19.19</a> </p>
 <p>
 <a id="zigao"></a><span class="lycharname">子羔</span>，<span class="lycharname">柴</span>：高柴，字子羔，少孔子30岁，<a href="#kangshu">卫国</a>人，曾任卫国<a href="#shishi">士师</a>。《孔子家语&middot;七十二弟子解》说他<span class="lyq">长不过<a href="#chi3">六尺</a>，状貌甚恶；为人笃孝而有法正。</span>《礼记&middot;檀弓上》记载他<span class="lyq">执亲之丧也，泣血三年，未尝见齿，君子以为难。</span>（见齿：笑。）《孔子家语&middot;致思》载，他在<a href="#kuaikuizhiluan">蒯聩之乱</a>出逃时，有位曾被他处以断足之刑的守门人连续3次为他指路，并坦言自己受刑罪有应得，对子羔是心悦诚服。孔子得知后赞许道：<span class="lyq">善哉为吏！其用法一也。思仁恕则树德，加严暴则树怨。公以行之，其子羔乎！</span>子羔墓遗址在今山东省临沂市兰陵县。 <a href="#11.18" class="lyref">11.18</a> <a href="#11.25" class="lyref">11.25</a> </p>
@@ -14762,7 +14767,7 @@ img.characterimg {
 <a id="zhougong"></a><span class="lycharname">周公</span>：姬旦，<a href="#wen">周文王</a>四子，周初文、武、成王的三朝重臣，谥号是文（&ldquo;经纬天地曰文&rdquo;）。周朝建立后，他被<a href="#wu">武王</a>封于鲁（都城在今山东省曲阜市），由长子<a href="#lugong">伯禽</a>代任，自己一直辅佐周王室，在<a href="#wangji">王畿</a>内另有<a href="#jia1">采邑</a>周城，故称周公。</p>
 <p>周公旦具有高尚的品德，卓越的才能，是孔子倾心仰慕的大<a href="#sheng4">圣人</a>。<span class="lyq">自文王在时，旦为子孝，笃仁，异于群子。及武王即位，旦常辅翼武王，用事居多。</span>武王有疾，周公设坛祭祖，情愿以身相代。<a id="chengwang"></a>武王去世后，继位的<span class="lykeyword">成王</span>（姬诵，前1042年&mdash;前1021年在位）年少，周公摄政当国，威仪如君；7年后还政成王，恭敬称臣。成王患病，周公又祷神自代。他和<a href="#shaogong">召公</a>主持营建的新城洛邑，成为后来<a href="#zhouchao">东周</a>的都城；他参照<a href="#shangchao">殷商</a>的传统礼仪，制定了周朝的礼乐制度，相传是儒家经典《周礼》的作者；他还多次平定了诸侯叛乱，使成王及随后的<span class="lykeyword">康王</span>（姬钊，前1020年&mdash;前996年在位）任内，<span class="lyq">天下安宁，刑<a href="#cuo4">错</a>四十余年不用</span>，后来<span class="lykeyword">文武成康</span>就成为盛世的代名词。《礼记&middot;明堂位》记载：<span class="lyq">成王以周公为有勋劳于天下，是以封周公于曲阜，地方七百里，革车千乘，命鲁公世世祀周公以天子之礼乐</span>，鲁国得以保留了周王室的大量文献制度，并受到其它诸侯国的尊重。事见《史记&middot;周本纪》、《史记&middot;鲁周公世家》、《尚书&middot;周书》。 <a href="#7.5" class="lyref">7.5</a> <a href="#8.11" class="lyref">8.11</a> <a href="#11.17" class="lyref">11.17</a> <a href="#18.10" class="lyref">18.10</a> </p>
 <p>
-<a id="shaogong"></a>召（<span class="lypinyin">sh&agrave;o</span>）公奭（<span class="lypinyin">sh&igrave;</span>）：姬奭，周初文、武、成、康的四朝重臣，谥号是康（&ldquo;安乐抚民曰康&rdquo;）。周朝建立后，他被<a href="#wu">武王</a>封于燕（<span class="lypinyin">yān</span>，都城在今北京市房山区），由长子克代任，自己一直辅佐周王室，在王畿内另有采邑召城，故称召公。《韩诗外传》第1卷第28章说，召公辅政时，不忍<span class="lyq">以吾一身而劳百姓</span>，拒绝营造豪华的办公楼，而是亲赴乡野田间听取民众诉求，止歇在甘棠树下。后人睹物思人，写下了《诗经&middot;召南&middot;甘棠》：<span class="lyq">蔽芾甘棠，勿剪勿败！召伯所憩。</span>（甘棠：又名棠梨、豆梨，果实圆形褐色，小如樱桃。蔽芾（<span class="lypinyin">f&egrave;i</span>）：枝叶茂盛浓郁的样子。）</p>
+<a id="shaogong"></a>召（<span class="lypinyin">sh&agrave;o</span>）公奭（<span class="lypinyin">sh&igrave;</span>）：姬奭，周初文、武、成、康的四朝重臣，谥号是康（&ldquo;安乐抚民曰康&rdquo;）。周朝建立后，他被<a href="#wu">武王</a>封于燕（<span class="lypinyin">yān</span>，都城在今北京市房山区），由长子克代任，自己一直辅佐周王室，在王畿内另有采邑召城，故称召公。《韩诗外传》第1卷第28章说，召公辅政时，不忍<span class="lyq">以吾一身而劳百姓</span>，拒绝营造豪华的办公楼，亲赴乡野田间听取民众心声，止歇在甘棠树下。后人睹物思人，写下了《诗经&middot;召南&middot;甘棠》：<span class="lyq">蔽芾甘棠，勿剪勿败！召伯所憩。</span>（甘棠：又名棠梨、豆梨，果实圆形褐色，小如樱桃。蔽芾（<span class="lypinyin">f&egrave;i</span>）：枝叶茂盛浓郁的样子。）</p>
 <p>周召二公的采邑是从<a href="#taibo">古公亶父</a>创立的旧周国划分的。周公主抓国政，召公主抓外交，成王年少时，二公代理天下：<span class="lyq">自陕以西，召公主之；自陕以东，周公主之。</span>（陕：一说为今河南省三门峡市陕州区，这样分则周公负责的范围大得多；一说为王城郏鄏（<span class="lypinyin">ji&aacute; rǔ</span>），在今河南省洛阳市内，这样分则较均衡。）召公与周公既密切配合又互有制约，成就了西周的鼎盛时代。事见《史记&middot;燕召公世家》、《尚书&middot;周书》。</p>
 <p>周公旦、召公奭去世后，周公、召公就成为他们后代的专有封号，继任者同样留在周廷辅政。</p>
 <p>
