--- a/aboly.html
+++ b/aboly.html
@@ -4868,7 +4868,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽。<span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很舒畅地游走了，子产听到后为鱼<span class="lyq">得其所哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也有解释为（合乎情理的）<a href="#fang1">方式</a>。）</span></span>
+<span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽。<span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很欢畅地游走了，子产听到后为鱼<span class="lyq">得其所哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也有解释为（合乎情理的）<a href="#fang1">方式</a>。）</span></span>
 </p>
 </li>
 </ul>
@@ -6573,7 +6573,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">与</span>：动词，称赞，赞许，认可。淡泊功利，注重修养，是孔子的一贯主张。<span class="lyseealso"><span>【参】</span><span><a href="#7.16" class="lyref">7.16</a> 。《史记&middot;孟子荀卿列传》开篇：<span class="lyq">太史公曰：余读孟子书，至梁惠王问&ldquo;何以利吾国&rdquo;，未尝不<a href="#fei4">废</a>书而叹也。曰：嗟乎，利诚乱之始也！夫子罕言利者，常防其原也。</span><a id="xixirangrang"></a>《货殖列传》又承认逐利乃世间常态：<span class="lyq">天下熙熙，皆为利来；天下壤壤，皆为利往。</span>（熙熙、壤壤：都是纷杂众多的样子，壤壤通&ldquo;攘攘&rdquo;。）</span></span>
+<span class="lyterm">与</span>：动词，称赞，赞许，认可。淡泊<a href="#9.2">名</a>利，注重修养，是孔子的一贯主张。<span class="lyseealso"><span>【参】</span><span><a href="#7.16" class="lyref">7.16</a> 。《史记&middot;孟子荀卿列传》开篇：<span class="lyq">太史公曰：余读孟子书，至梁惠王问&ldquo;何以利吾国&rdquo;，未尝不<a href="#fei4">废</a>书而叹也。曰：嗟乎，利诚乱之始也！夫子罕言利者，常防其原也。</span><a id="xixirangrang"></a>《货殖列传》又承认逐利乃世间常态：<span class="lyq">天下熙熙，皆为利来；天下壤壤，皆为利往。</span>（熙熙、壤壤：都是纷杂众多的样子，壤壤通&ldquo;攘攘&rdquo;。）</span></span>
 </p>
 </li>
 </ul>
@@ -13711,11 +13711,15 @@ img.characterimg {
 </li>
 <li>
 <p>
+<span class="lyterm">降其志</span>指思想上降低自己的志向，<span class="lyterm">辱其身</span>指行为上损伤自己的尊严。</p>
+</li>
+<li>
+<p>
 <span class="lyterm">言<a href="#zhong4">中</a><a href="#lun2">伦</a>，行中虑</span>：说话符合伦理规范，行为经过深思熟虑。柳下惠的事迹见 <a href="#18.2" class="lyref">18.2</a> 。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">放言</span>：指不议论世事。现代汉语的&ldquo;放言&rdquo;则指放纵言论。<span class="lyterm">放</span>：舍弃，废置。这是古注比较一致的解释，也有今注本解释为肆意狂言，结合上下文看似乎不妥。<span class="lyseealso"><span>【参】</span><span>《史记&middot;晋世家》载，<a href="#jinwengong">晋文公</a>继位后遍赏功臣，一直随他流亡、又有割股解饥之恩的介子推耻于言禄，禄亦不及。子推将要隐居深山，母亲说应使文公知其不公，他回答：<span class="lyq">&ldquo;言，身之<a href="#wen2">文</a>也。身欲隐，安用文之？文之，是求显也。&rdquo;</span>至死不见文公。</span></span>
+<span class="lyterm">放言</span>：指不议论世事。现代汉语的&ldquo;放言&rdquo;则指放纵言论，想说就说。<span class="lyterm">放</span>：舍弃，废置。这是古注比较一致的解释，也有今注本解释为肆意狂言，结合上下文和历史实例看似乎不妥。<span class="lyseealso"><span>【参】</span><span>《史记&middot;晋世家》载，<a href="#jinwengong">晋文公</a>继位后遍赏功臣，介子推一直随他流亡，又有割股解饥之恩，但耻于言禄，禄亦不及。子推将要隐居深山，母亲说应使文公知其不公，他回答：<span class="lyq">&ldquo;言，身之<a href="#wen2">文</a>也。身欲隐，安用文之？文之，是求显也。&rdquo;</span>至死不见文公。</span></span>
 </p>
 </li>
 <li>
@@ -14958,7 +14962,7 @@ img.characterimg {
 <p>什么是传统文化？我想，它应该是让人发自内心感到熟悉亲切，感到温暖安乐的东西吧。一个国家的传统文化，是国民的精神港湾，闪耀着自古以来的共同理想。柳诒徵先生的《中国文化史》说：<span class="lyq">孔子者，中国文化之中心也。无孔子则无中国文化。</span>如果不先了解孔子，又怎能断定这句话的是与非呢？</p>
 <p>《论语》是写孔子最真实可靠的材料。孔子在古代被称为<a href="#sheng4">圣人</a>，他自己却觉得，连<a href="#junzi">君子</a>的标准都还<a href="#7.33">够不上</a>，兴致勃勃地做着<a href="#7.17">学习计划</a>呢。孔子的形象，有时被神化，有时又被虚化，容易让人敬而远之，这可不是他的错。稍微读读《论语》就会觉得，孔子没有那么高深莫测，是一位可敬又风趣的老人家。仔细想想还会明白，他的心灵离我们有多么近，尽管年代隔了那么远。</p>
 <p>《论语》是一本很小的书。我采用的<a href="#lunyuversion">版本</a>，原文分为20篇，共512章，15916字。如果按现代文的阅读速度，40分钟就能读完一遍。它的文字简练优美，只是有些难字需要解释，为了帮助理解，还要补充一些背景材料。它的涵义丰富深远，不太适合速读，应该反复玩味。这就是同时提供了注释版和<a href="#baiwenban">白文版</a>的原因。</p>
-<p>《论语》的注本已经数不胜数，我又不是文科专业，为什么要另搞一套呢？</p>
+<p>《论语》的注本已经数不胜数，为什么还要另搞一套呢？</p>
 <p>我非常喜欢《论语》。我常想，假如《论语》能说话，一定很羡慕&ldquo;人家&rdquo;《圣经》有那么多的优质资源，从网站到电子书，内容精良，还可以免费使用。语录体的《论语》，难道不是碎片时间看上几眼，反复揣摩的绝好选择？</p>
 <p>我见过的注本中，古代的作品有的简洁有的细密，但现代人读起来难免艰涩。现代的作品，有的只解释字词而缺乏感想，比较沉闷，有的回护古人较多，略显执拗，有的刻意回避了传统的观点，缚手缚脚，也有的发挥较远，并不耐读。而且一旦出版，大小瑕疵无法随时修正，新材料新成果难以及时补充，让认真的作者和读者都很苦恼。</p>
 <p>这本书是我在业余时间的一个尝试，希望写成一个既严谨又可读，既保留传统内涵又反映现代价值的普及读本。我没受过文史科班训练，遇到不懂的就去查考比较，力求字字落实。因为没有规范写法的条条框框，内容和形式的选择就相对灵活，这在<a href="#usage">使用说明</a>里作了交代。把它发布为<a href="#projectinfo">开源项目</a>，就可以自由地阅读，便捷地更新，让更多的人直接受益。有时候人总要撒点野，做点自己特别想做的事情，这个项目就是一个例子。</p>
