--- a/aboly.html
+++ b/aboly.html
@@ -543,7 +543,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与&ldquo;小人&rdquo;相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，近似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记&middot;曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span>
+<a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能卓越之人，与&ldquo;小人&rdquo;相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，&ldquo;人不知而不愠&rdquo;属于君子之风，而非等同于君子，可以参考<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记&middot;曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span>
 </p>
 <p>
 <a id="daren"></a>&ldquo;君子&rdquo;最早见于《<a href="#shangshu">尚书</a>》的《虞夏书&middot;大禹谟》（伪）、《周书&middot;酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，&ldquo;<a href="#jun1">君</a>之子&rdquo;出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>&middot;魏风&middot;伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span>
@@ -1200,7 +1200,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">如切如磋，如琢如磨</span>：出自《诗经&middot;卫风》第一首《淇奥》，原诗是形容君子勤于修养学问品德，就像工匠精心打磨象牙、雕琢美玉。子贡引用它想表达的意思是，人有了好的条件，还要注重修养磨练才能成器。<span class="lyseealso"><span>【参】</span><span>《诗经》毛亨传：<span class="lyq">治骨曰切，象曰磋，玉曰琢，石曰磨。</span>《礼记&middot;学记》：<span class="lyq">玉不琢，不成器；人不学，不知道。是故古之王者建国君民，教学为先。</span></span></span>
+<span class="lyterm">如切如磋，如琢如磨</span>：出自《诗经&middot;卫风》第一首《淇奥》，原诗是形容君子勤于修养学问品德，就像工匠精心打磨象牙、雕琢美玉。子贡引用它想表达的意思是，人有了好的条件，还要注重修养磨练才能成器。<span class="lyseealso"><span>【参】</span><span>《诗经》毛亨传：<span class="lyq">治骨曰切，象曰磋，玉曰琢，石曰磨。</span>《礼记&middot;学记》：<span class="lyq">玉不琢，不成<a href="#qi4">器</a>；人不学，不知道。是故古之王者建国君民，教学为先。</span></span></span>
 </p>
 <p>
 <a id="huoyongjingdian"></a>从经典中抽取只言片语来表达自己的观点，是当时的惯常做法。有时想表达的意思故意偏离或超出了原意，就要只看字面含义，从引用者的上下文重新理解。后文还有引用《诗经》之处，可以留意这个特点。元代钱惟善《韩诗外传序》评价：<span class="lyq">《外传》虽非解经之详，断章取义，要有合于孔门<a href="#zixia">商</a>、<a href="#zigong">赐</a>言诗之旨</span>（<a id="yao4"></a>要：总，总之），说的就是本章与 <a href="#3.8" class="lyref">3.8</a> ，这种方式被视为<span class="lyq">阐<a href="#weiyandayi">微</a>而彰显</span>的学术成就（明代杨祜（<span class="lypinyin">h&ugrave;</span>）《韩诗外传》序）。<a href="#liujing">六经</a>成为正统后，古代学者的主要职责之一就是注疏经典，根据静态的文本阐述古代圣贤之意，发掘适合时用的修身治世准则，由此形成了传统儒家学术的主体&mdash;&mdash;经学。</p>
@@ -1602,7 +1602,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="qi4"></a><span class="lyterm">器</span>：器具，用具，比喻人局限于某一方面的才能，不会融会贯通，灵活机变。又引申为才能，人才。<span class="lyseealso"><span>【参】</span><span>《周易&middot;系辞》：<span class="lyq">形而上者谓之道，形而下者谓之器，化而裁之谓之变，推而行之谓之通，举而措之天下之民，谓之事业。</span>（形而上：在具体形态产生之前，即抽象，元（meta-）。）</span></span>
+<a id="qi4"></a><span class="lyterm">器</span>：器具，用具，比喻人局限于某一方面的才能。又引申为才能，人才。<span class="lyexample"><span>【例】</span><span><a href="#5.4" class="lyref">5.4</a> <span class="lyq">女器也。</span>成语有&ldquo;器小易盈&rdquo;、&ldquo;大器晚成&rdquo;。</span></span><span class="lyseealso"><span>【参】</span><span>《周易&middot;系辞》：<span class="lyq">形而上者谓之道，形而下者谓之器，化而裁之谓之变，推而行之谓之通，举而措之天下之民，谓之事业。</span>（形而上：在具体形态产生之前，即抽象，元（meta-）。）《朱子语类》：<span class="lyq">德者，体也；才者，用也。君子之人，亦具<a href="#sheng4">圣人</a>之体用。体无不备，用无不周，次于圣人者也。</span></span></span>
 </p>
 </li>
 </ul>
@@ -2629,7 +2629,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">管仲之器小</span>。<a id="qixiao"></a><span class="lyterm">器</span>：才具，喻指胸怀，度量，格局。<span class="lyterm">器小</span>则易盈，具体所指有不同的解释。</p>
+<span class="lyterm">管仲之器小</span>。<a id="qixiao"></a><span class="lyterm"><a href="#qi4">器</a></span>：才具，喻指胸怀，度量，格局。<span class="lyterm">器小</span>则易盈，具体所指有不同的解释。</p>
 <p>
 <a id="wangdao"></a>《史记&middot;管晏列传》认为指管仲未能辅佐<a href="#qihuangong">齐桓公</a>推行以仁义礼教治国的<span class="lykeyword">王道</span>（这是儒家崇尚的），而施行以武力刑法治国的<span class="lykeyword">霸道</span>（这是法家主张的）：<span class="lyq">周道衰微，桓公既贤，而不勉之至王，乃称霸哉？</span>《韩诗外传》第3卷第7章也认为：<span class="lyq">管仲为政者也，未及修礼也。故修礼者王，为政者强，取民者安，聚敛者亡。</span>（取民：得民心。）</p>
 <p>
@@ -3510,6 +3510,8 @@ img.characterimg {
 <span class="lyterm">瑚</span>和<span class="lyterm">琏</span>（<span class="lypinyin">liǎn</span>）都是古代<a href="#zongmiao">宗庙</a>中盛<a href="#wugu">五谷</a>的礼器。<span class="lyterm">瑚琏</span>比喻善于治国理政、庙堂之上的<a href="#qi4">人才</a>。</p>
 </li>
 </ul>
+<p>以子贡之贤能，尚被评为<a href="#qi4">器</a>，可见<a href="#junzi">君子</a>之难能可贵，也可见孔子对弟子的期望之高。<span class="lyseealso"><span>【参】</span><span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管仲之器</span>，<a href="#13.20" class="lyref">13.20</a> <span class="lyq">斗筲之徒</span>。清初陆陇其《松阳讲义》：<span class="lyq">大抵天下人才最怕是无用。不但庸陋而无用，有一种极聪明、极有学问的人，却一些用也没有。如世间许多记诵词章、虚无寂灭之辈，他天资尽好，费尽一生心力，只做成一个无用之人。故这一个&ldquo;器&rdquo;字亦是最难得的。人到了&ldquo;器&rdquo;的地位，便是天地间一个有用之人了。</span></span></span>
+</p>
 </div>
 </div>
 <a id="5.5"></a>
@@ -4977,7 +4979,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申指道德品格达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书&middot;周书&middot;洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。&hellip;&hellip;明作晰，聪作谋，睿作圣。</span>（作：则。）</span></span>
+<a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申指道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书&middot;周书&middot;洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。&hellip;&hellip;明作晰，聪作谋，睿作圣。</span>（作：则。）</span></span>
 </p>
 <p>根据孔子之意，<a href="#ren2">仁</a>是凡夫俗子能达到的最高境界，所关爱的范围毕竟有限；圣是更进一步的理想化境界，要做到博施济众，连上古贤君都力有未逮。这就激励着历代儒者在修身向学之外积极投身政治，为大众谋福利。</p>
 <p>儒家经典中，圣一般特指<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#tang">汤</a>、<a href="#wen">文</a>、<a href="#wu">武</a>、<a href="#zhougong">周公</a>和孔子，后来又专称孔子为圣人，尊为<span class="lykeyword">至圣先师</span>。</p>
@@ -6121,11 +6123,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">寄百里之<a href="#ming4">命</a></span>：古注多解释为寄托整个国家的政令，意指暂时代理国政，和前面的&ldquo;托孤&rdquo;连起来看，明显的例子是<a href="#zhougong">周公</a>为成王摄政。也不妨分开理解，即寄托整个国家的命运。<span class="lyterm">百里</span>属于<a href="#bingyi">诸侯国</a>的领土范围。</p>
+<span class="lyterm">寄百里之<a href="#ming4">命</a></span>：古注多解释为寄托整个国家的政令，意指暂时代理国政。如果和前面的&ldquo;托孤&rdquo;连起来看，明显的例子是<a href="#zhougong">周公</a>为成王摄政。也不妨分开理解，即寄托整个国家的命运。<span class="lyterm">百里</span>属于<a href="#bingyi">诸侯国</a>的规模，这里未必是实指。</p>
 </li>
 <li>
 <p>
-<a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。</span></span>
+<a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！&hellip;&hellip;故伊川说：&ldquo;君子者，才德出众之名。&rdquo;孔子曰：&ldquo;<a href="#2.12">君子不器</a>。&rdquo;既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span>
 </p>
 </li>
 <li>
@@ -9479,7 +9481,7 @@ img.characterimg {
 <p>
 <span class="lyterm">选于众</span>：从民众中（量才）选拔，与后来的贵族世袭相对。<a id="xuanyuzhong"></a><span class="lyseealso"><span>【参】</span><span>《史记&middot;五帝本纪》描述了<a href="#shun">舜帝</a>广开言路，使<a href="#gaoyao">皋陶</a>等22名贤臣各得其所的情景：<span class="lyq">舜乃至于文祖，谋于四岳，辟四门，明通四方耳目，命十二牧论帝德，行厚德，远佞人，则蛮夷率服。&hellip;&hellip;舜曰：&ldquo;皋陶！蛮夷猾夏，寇贼奸轨，汝作<a href="#shishi">士</a>，五刑有服，五服三就；五流有度，五度三居；维明能信。&rdquo;</span>（文祖：<a href="#yao">尧帝</a>的祖庙。辟四门：指广迎四方贤人。牧：<a href="#sanfentianxia">州</a>长。猾：侵扰。<a id="jiangui"></a>奸轨：又作&ldquo;奸宄&rdquo;（<span class="lypinyin">guǐ</span>），违法作乱。在外称奸，在内称宄。服：适度。就：处所。流：流放之刑。）</span></span>
 </p>
-<p>后一个&ldquo;选于众&rdquo;偏重于修辞，<a href="#tang">商汤</a>是先得<a href="#yiyin">伊尹</a>然后夺取天下的。《史记&middot;殷本纪》录有两种说法：伊尹想投奔商汤而无门径，就先去当了商汤夫人家的厨师陪嫁过去，<span class="lyq">以滋味说汤，<a href="#zhi4b">致</a>于<a href="#wangdao">王道</a></span>（详见《吕氏春秋&middot;孝行览&middot;本味》），故被后世奉为烹饪之祖；伊尹是隐士，商汤5次派人礼聘才同意出山。后来他又投奔<a href="#xiachao">桀</a>（《吕氏春秋&middot;慎大览&middot;慎大》、《孙子兵法&middot;用间》等认为，他是被商汤派去进行离间破坏），不齿桀之无道，复归于汤，终成大业。</p>
+<p>后一个&ldquo;选于众&rdquo;偏重于修辞，<a href="#tang">商汤</a>是先得<a href="#yiyin">伊尹</a>然后夺取天下的。《史记&middot;殷本纪》有两种说法：伊尹想投奔商汤而无门径，就先去当了商汤夫人家的厨师陪嫁过去，<span class="lyq">以滋味说汤，<a href="#zhi4b">致</a>于<a href="#wangdao">王道</a></span>（详见《吕氏春秋&middot;孝行览&middot;本味》），故被后世奉为烹饪之祖；伊尹是隐士，商汤5次派人礼聘才同意出山。后来他又投奔<a href="#xiachao">桀</a>（也可能是被商汤派去离间破坏，见《吕氏春秋&middot;慎大览&middot;慎大》、《孙子兵法&middot;用间》），不齿桀之无道，复归于汤，终成大业。</p>
 </li>
 <li>
 <p>
@@ -12104,7 +12106,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">小知</span>：指从细微处察知其为人。君子才德内蕴丰富，小人反之。</p>
+<span class="lyterm">小知</span>：指从细微处察知其为人。君子才德内蕴丰富，小人反之。<span class="lyseealso"><span>【参】</span><span><a href="#2.12" class="lyref">2.12</a> <span class="lyq">君子不器。</span></span></span>
+</p>
 </li>
 <li>
 <p>
@@ -13711,7 +13714,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">降其志</span>指思想上降低自己的志向，<span class="lyterm">辱其身</span>指行为上损伤自己的尊严。</p>
+<span class="lyterm">降<a href="#qi2">其</a>志</span>是思想上降低自己的志向，<span class="lyterm">辱其身</span>是行为上损伤自己的尊严。</p>
 </li>
 <li>
 <p>
